--- a/AilianBT/App.xaml
+++ b/AilianBT/App.xaml
@@ -1320,6 +1320,13 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+            <ResourceDictionary x:Key="ThemeColors">
+                <Color x:Key="浪漫紫" >#FFBE3CFD</Color>
+                <Color x:Key="烟波蓝">#FF1D91FF</Color>
+                <Color x:Key="橄榄绿">#FF32B434</Color>
+                <Color x:Key="落日黄">#FFFF9923</Color>
+                <Color x:Key="少女粉">#FFE777AB</Color>
+            </ResourceDictionary>
         </ResourceDictionary>
     </Application.Resources>
 
