--- a/AilianBT/Views/SettingView.xaml
+++ b/AilianBT/Views/SettingView.xaml
@@ -3,10 +3,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:AilianBT.Views"
+    xmlns:model="using:AilianBT.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        <local:ColorBrushConverter x:Key="ColorBrushConverter"></local:ColorBrushConverter>
+    </Page.Resources>
     <Grid Background="{StaticResource  AilianBtGridBackground2}">
         <Image x:Name="imgbackground" Stretch="None" HorizontalAlignment="Right" VerticalAlignment="Bottom"></Image>
         <StackPanel Padding="20" >
@@ -35,7 +38,29 @@
             </StackPanel>
             <StackPanel  Margin="0,20,0,0">
                 <TextBlock Margin="8" Foreground="{StaticResource  AilianBtMainColor}">当前版本</TextBlock>
-                <TextBlock Margin="8,0,0,0" Foreground="{StaticResource  AilianBtListMainForeground}">1.1.0</TextBlock>
+                <TextBlock Margin="8,0,0,0" Foreground="{StaticResource  AilianBtListMainForeground}">1.4.0</TextBlock>
+            </StackPanel>
+            <StackPanel Margin="0,20,0,0">
+                <TextBlock Margin="8" Foreground="{StaticResource  AilianBtMainColor}">主色调</TextBlock>
+                <ListView Margin="8" Foreground="{ThemeResource AilianBtMainColor}" ItemsSource="{x:Bind ThemeColors,Mode=OneWay}"
+                       IsItemClickEnabled="True" ItemClick="ThemeItemClick">
+                    <ListView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <ItemsWrapGrid ItemWidth="48"  HorizontalAlignment="Left" Orientation="Horizontal"></ItemsWrapGrid>
+                        </ItemsPanelTemplate>
+                    </ListView.ItemsPanel>
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="model:ThemeColorModel">
+                            <Rectangle HorizontalAlignment="Center" VerticalAlignment="Center" Width="40" Height="40" Fill="{x:Bind ThemeColor ,Converter={StaticResource ColorBrushConverter}}"></Rectangle>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Padding" Value="0"></Setter>
+                            <Setter Property="Margin" Value="0"></Setter>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
             </StackPanel>
             <StackPanel  Margin="0,20,0,0">
                 <TextBlock Margin="8" Foreground="{StaticResource  AilianBtMainColor}">关于作者（CQ）</TextBlock>
@@ -47,7 +72,7 @@
             </StackPanel>
 
         </StackPanel>
-
+        
     </Grid>
     
 </Page>
