remove useless files; update the ui in MainView and SearchView.

--- a/AilianBT/App.xaml
+++ b/AilianBT/App.xaml
@@ -1322,8 +1322,8 @@
                     </Setter.Value>
                 </Setter>
             </Style>
-            
-            
+
+
             <ResourceDictionary x:Key="ThemeColors">
                 <Color x:Key="浪漫紫" >#FFBE3CFD</Color>
                 <Color x:Key="烟波蓝">#FF1D91FF</Color>
@@ -1331,6 +1331,7 @@
                 <Color x:Key="落日黄">#FFFF9923</Color>
                 <Color x:Key="少女粉">#FFE777AB</Color>
             </ResourceDictionary>
+            <x:String x:Key="FontAwesome">/Assets/Fonts/fontawesome-webfont.ttf#FontAwesome</x:String>
         </ResourceDictionary>
     </Application.Resources>
 
