--- a/AilianBT/Views/ShowView.xaml
+++ b/AilianBT/Views/ShowView.xaml
@@ -82,14 +82,33 @@
         </Style>
     </Page.Resources>
     <Grid  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ScrollViewer>
-            <Grid >
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition></RowDefinition>
-            </Grid.RowDefinitions>
-            
-                <Grid x:Name="panel" Background="{StaticResource AilianBtGridBackground}" Padding="12">
+        <ScrollViewer x:Name="scrollView"  >
+            <Grid x:Name="root">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition></RowDefinition>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+                    <Pivot  x:Name="pivot" Background="AliceBlue" Grid.Row="1" >
+
+                        <PivotItem >
+                            <WebView x:Name="webViewSummary" DefaultBackgroundColor="AliceBlue"
+                                 ScrollViewer.VerticalScrollMode="Disabled"
+                                 HorizontalAlignment="Stretch" 
+                                  ManipulationMode="None"
+                                 local:ShowView.DetailInfo="{x:Bind ShowVM.ShowModel.Summary,Mode=OneWay}"></WebView>
+                        </PivotItem>
+                        <PivotItem  >
+                            <WebView DefaultBackgroundColor="AliceBlue" 
+                                 local:ShowView.DetailInfo="{x:Bind ShowVM.ShowModel.FileInfo,Mode=OneWay}"></WebView>
+                        </PivotItem>
+                    </Pivot>
+                </Grid>
+                <Grid x:Name="panel" Background="{StaticResource AilianBtGridBackground}">
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
@@ -97,7 +116,7 @@
                     </Grid.RowDefinitions>
 
                     <TextBlock Margin="4" Foreground="{StaticResource AilianBtListMainForeground}"  FontSize="22" TextWrapping="Wrap" Text="{x:Bind ShowVM.ShowModel.Title,Mode=OneWay}"></TextBlock>
-                    <Grid Grid.Row="1"  Margin="4">
+                    <Grid Grid.Row="1" Margin="4" >
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition/>
                             <ColumnDefinition/>
@@ -111,58 +130,42 @@
                         <Run Text="{x:Bind ShowVM.ShowModel.Uper,Mode=OneWay}"></Run>
                         </TextBlock>
                     </Grid>
-                    <StackPanel  Grid.Row="2"  Margin="4" Orientation="Horizontal">
-                        <Button  Margin="4,0"   Command="{x:Bind ShowVM.DownloadBtCommand}" CommandParameter="{x:Bind ShowVM.ShowModel.BtLink,Mode=OneWay}">
-                            <Button.Content>
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock FontSize="15"  FontFamily="Segoe MDL2 Assets" Text="&#xE896;"/>
-                                    <TextBlock FontSize="12">下载种子</TextBlock>
-                                </StackPanel>
-                            </Button.Content>
-                        </Button>
-                        <Button  Margin="4,0"  Command="{x:Bind ShowVM.DownloadMagnetCommand}" CommandParameter="{x:Bind ShowVM.ShowModel.MagnetLink,Mode=OneWay}">
-                            <Button.Content>
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock FontSize="15"  FontFamily="Segoe MDL2 Assets" Text="&#xE8C8;"/>
-                                    <TextBlock FontSize="12">复制磁链</TextBlock>
-                                </StackPanel>
-                            </Button.Content>
-                        </Button>
-                    </StackPanel>
-                </Grid>
-                <Grid Grid.Row="1" >
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
-                  
-                    <ListView  x:Name="navibar" Background="{StaticResource AilianBtGridBackground2}"
+                    <StackPanel Grid.Row="2" x:Name="panelControl" Orientation="Vertical"  >
+                        <StackPanel  Orientation="Horizontal" Padding="4,12">
+                            <Button  Margin="4,0"   Command="{x:Bind ShowVM.DownloadBtCommand}" CommandParameter="{x:Bind ShowVM.ShowModel.BtLink,Mode=OneWay}">
+                                <Button.Content>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontSize="15"  FontFamily="Segoe MDL2 Assets" Text="&#xE896;"/>
+                                        <TextBlock FontSize="12">下载种子</TextBlock>
+                                    </StackPanel>
+                                </Button.Content>
+                            </Button>
+                            <Button  Margin="4,0"  Command="{x:Bind ShowVM.DownloadMagnetCommand}" CommandParameter="{x:Bind ShowVM.ShowModel.MagnetLink,Mode=OneWay}">
+                                <Button.Content>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock FontSize="15"  FontFamily="Segoe MDL2 Assets" Text="&#xE8C8;"/>
+                                        <TextBlock FontSize="12">复制磁链</TextBlock>
+                                    </StackPanel>
+                                </Button.Content>
+                            </Button>
+                        </StackPanel>
+                        <ListView  x:Name="navibar" Background="{StaticResource AilianBtGridBackground2}"
                            SelectedIndex="{Binding ElementName=pivot,Path=SelectedIndex,Mode=TwoWay}"  >
-                        <TextBlock FontSize="20">简介</TextBlock>
-                        <TextBlock FontSize="20">文件</TextBlock>
-                        <ListView.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Orientation="Horizontal"></StackPanel>
-                            </ItemsPanelTemplate>
-                        </ListView.ItemsPanel>
-                    </ListView>
-                    <Pivot  x:Name="pivot" Background="AliceBlue" Grid.Row="1" >
-
-                        <PivotItem >
-                            <WebView x:Name="webViewSummary" DefaultBackgroundColor="AliceBlue"
-                                 HorizontalAlignment="Stretch" 
-                                  ManipulationMode="None"
-                                 local:ShowView.DetailInfo="{x:Bind ShowVM.ShowModel.Summary,Mode=OneWay}"></WebView>
-                        </PivotItem>
-                        <PivotItem  >
-                            <WebView DefaultBackgroundColor="AliceBlue" 
-                                 local:ShowView.DetailInfo="{x:Bind ShowVM.ShowModel.FileInfo,Mode=OneWay}"></WebView>
-                        </PivotItem>
-                    </Pivot>
+                            <TextBlock FontSize="20">简介</TextBlock>
+                            <TextBlock FontSize="20">文件</TextBlock>
+                            <ListView.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel Orientation="Horizontal"></StackPanel>
+                                </ItemsPanelTemplate>
+                            </ListView.ItemsPanel>
+                        </ListView>
+                    </StackPanel>
+                    
                 </Grid>
-            
-            
-        </Grid>
+
+               
+            </Grid>
         </ScrollViewer>
+        
     </Grid>
 </Page>
